--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
     "@angular/forms": "~11.2.7",
+    "@angular/google-maps": "^11.2.6",
     "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@googlemaps/js-api-loader": "^1.11.3",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^6.2.0",
